# iot

./: .gitignore  compose.yaml  dockerfile.hub  dockerfile.node  makefile  readme.md
etc/container/volumes/nats/: nats-server.conf
goofy_lib/rpc/: conn.go  go.mod  readme.md  request.go
hub/: .gitignore  go.mod  go.sum  main.go  makefile
hub/cmd/update_board/: main.go
hub/web/handler/: router.go
hub/web/view/: index.templ  layout.templ
hub/web/view/view_nodes/: index.templ
hub/web/view/view_rustyfalcon/: index.templ
lib/go/rpc/: conn.go  conn_test.go  go.mod
lib/go/tempil/: attr.go  go.mod  go.sum  vars.go
node/: config.go  config.yml  go.mod  go.sum  node.go
node/goofy_hawk/: .gitignore  go.mod  go.sum  main.go  makefile
node/goofy_hawk/cmd/update_board/: main.go
node/goofy_hawk/lib/everpc/: conn.go  conn_test.go  peer.go  request.go
node/goofy_hawk/lib/prot/: conn.go  conn_test.go  peer.go  request.go  run_handler.go
node/goofy_hawk/lib/rpc/: readme.md
node/rusty_falcon/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  espflash.toml  makefile  partitions.csv  readme.md  rustfmt.toml
node/rusty_falcon/.cargo/: config.toml
node/rusty_falcon/ctrler/: config.go  config.yml  main.go
node/rusty_falcon/ctrler/view/: index.templ
node/rusty_falcon/firmware/: .env.example  .gitignore  makefile  readme.md
node/rusty_falcon/firmware/.cargo/: config.toml
node/rusty_falcon/firmware/src/: event.rs  handler.rs  main.rs  stepper.rs
node/rusty_falcon/src/: event.rs  handler.rs  main.rs  otaupdate.rs
rusty_lib/rpc/: readme.md
(+13 files in other folders)
