[package]
name = "rusty_falcon"
version = "0.1.0"
authors = ["frbrno <frbrno@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

# [package.metadata.espflash]
# partition_table = "partitions.csv"

[[bin]]
name = "rusty_falcon"
harness = false       # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = "0.49"
embedded-svc = "0.28"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
flume = "0.11"
uln2003 = "0.3"

[build-dependencies]
embuild = "0.32.0"
chrono = "0.4.19"
